feat: Integrate Firebase and enhance data structures
This commit introduces Firebase for persistent data storage, replacing the previous local storage approach. It includes significant updates to data structures to accommodate the new backend requirements and enhance application functionality.

Key changes:
- **Firebase Integration:** Added `firebase` dependency and configured Firebase authentication and Firestore.
- **Data Model Enhancements:**
    - `Task`: Added `price` field.
    - `Worker`: Added `rib`, `cnss`, `seniorityPercentage`, `numberOfChildren`, and `isArchived` fields.
    - `WorkerGroup`: Added `isArchived`, `isDepartedGroup`, `owner` (UID), and `ownerEmail` fields.
    - `DailyLog`: Added `id` (Firestore ID) and `owner` (UID) fields.
    - Introduced new types: `WorkedDays`, `UserRole`, and `User` to manage user authentication and roles, and track worker days for payroll.
- **UI/UX Improvements:**
    - Updated `index.html` to include the Montserrat font and new color schemes for better branding.
    - Adjusted print margins for A4 reports.
    - Modified default background color.
- **Constants Update:** Added `price` to tasks in `constants.ts`.
- **Component Refactoring:**
    - `App.tsx`: Refactored to manage application state using Firebase, introduced new views (Login, Payroll, Worker Days, Transfer Order, User Management), and implemented authentication flow.
    - `components/WorkerDaysSection.tsx`: Added a new component for managing worker days.

--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
     <title>Gestion des Tâches – SONACOS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
         theme: {
           extend: {
+            fontFamily: {
+              'montserrat': ['Montserrat', 'sans-serif'],
+            },
             colors: {
               'sonacos-green': '#2E7D32',
               'sonacos-yellow': '#FFD54F',
-              'sonacos-beige': '#FBF9F6',
+              'sonacos-teal-dark': '#2A4D69',
+              'sonacos-lavender': '#EAEBFC',
+              'sonacos-brown': '#D39D3C',
+              'sonacos-blue-grey': '#607d8b',
+              'sonacos-slate-dark': '#34495E',
             }
           }
         }
@@ -25,7 +32,7 @@
     <style type="text/css" media="print">
       @page {
         size: A4;
-        margin: 0.75in;
+        margin: 0.375in;
       }
       body {
         -webkit-print-color-adjust: exact;
@@ -34,15 +41,56 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #FBF9F6; /* sonacos-beige */
+        background-color: #f1f5f9; /* slate-100 */
+      }
+      
+      /* Magical Effects Styles */
+      .interactive-glow {
+        position: relative;
+      }
+      .interactive-glow::before {
+        content: '';
+        position: absolute;
+        left: var(--glow-x, -1000px);
+        top: var(--glow-y, -1000px);
+        width: 300px;
+        height: 300px;
+        background: radial-gradient(circle closest-side, rgba(46, 125, 50, 0.08), transparent);
+        transform: translate(-50%, -50%);
+        transition: left 0.2s ease, top 0.2s ease;
+        pointer-events: none;
+        z-index: 0;
+      }
+
+      .ripple-effect {
+        position: absolute;
+        border-radius: 50%;
+        transform: scale(0);
+        animation: ripple-animation 600ms linear;
+        background-color: rgba(255, 255, 255, 0.7);
+      }
+      
+      button {
+        position: relative;
+        overflow: hidden;
+      }
+
+      @keyframes ripple-animation {
+        to {
+          transform: scale(4);
+          opacity: 0;
+        }
       }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" integrity="sha512-BNaRQnYJYiPSqHHDb58B0yaPfCu+Wgds8Gp/gU33kqBtgNS4tSPHuGibyoVBL5gI9kAJtrK0L4WmaLDigmekMA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" integrity="sha512-qZvrmS2ekKPF2mSznTQsxqPgnpkI4DNTlrdUmTzrDgektczlKNRRhy5X5AAOnx5S09ydFYWWNSfcEqDTTHgtNA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script type="importmap">
 {
   "imports": {
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/"
   }
 }
 </script>
