feat: Improve print functionality and layout
Enhance the printing experience by correctly handling page orientation and margins.

The `printElement` utility function now accepts an `orientation` parameter, defaulting to 'landscape'. This allows for dynamic control over the page layout during printing.

Additionally, the CSS for print media has been adjusted:
- Page margins are now set to 0 in the `@page` rule for cleaner printing.
- Margins are applied directly to the `body` element for better content spacing.

A hidden `div` (`#direct-export-container`) is now used to stage content for printing/PDF export, ensuring better isolation and preventing interference with the main DOM. This also correctly applies the `print:hidden` class to the container itself.

This change aims to provide more consistent and visually appealing printed reports.

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
     <style type="text/css" media="print">
       @page {
         size: A4;
-        margin: 0.375in;
+        margin: 0; /* Supprime les en-têtes/pieds de page du navigateur */
       }
       body {
         -webkit-print-color-adjust: exact;
+        margin: 0.375in; /* Applique la marge au contenu lui-même */
       }
     </style>
     <style>
@@ -96,6 +97,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <div id="direct-export-container" class="absolute -top-[9999px] -left-[9999px] print:hidden"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
